objects/Reservation__c.object
<CustomObject>
    <description>Room booking</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>email used for reservation</description>
        <inlineHelpText>email used for reservation</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>end of reservation</description>
        <inlineHelpText>end of reservation</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>type of reservation (confirmed/unconfirmed)</description>
        <inlineHelpText>type of reservation (confirmed/unconfirmed)</inlineHelpText>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reservation</fullName>
                </value>
                <value>
                    <fullName>Prereservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Room being booked</description>
        <inlineHelpText>Room being booked</inlineHelpText>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>begining of reservation</description>
        <inlineHelpText>begining of reservation</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>EndDate__c</columns>
        <columns>Room__c</columns>
        <columns>StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <recordTypes>
        <fullName>Prereservation</fullName>
        <active>true</active>
        <description>Unconfirmed reservation</description>
        <label>Prereservation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reservation</fullName>
        <active>true</active>
        <description>Confirmed reservation</description>
        <label>Reservation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EndDateValidation</fullName>
        <active>true</active>
        <description>check if reservation end date is at least 1 day later than  reservation start date</description>
        <errorConditionFormula>EndDate__c &lt;=  StartDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End date cannot be set earlier than the day after start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateValidation</fullName>
        <active>true</active>
        <description>validate that start date is not earlier than today</description>
        <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start day must be today or later</errorMessage>
    </validationRules>
</CustomObject>